crates/core/src/snapshots/marzano_core__test__after_each_file.snap
---
source: crates/core/src/test.rs
expression: results
---
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges: []
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
      - name: $
        scopedName: 1_0_$
        ranges: []
      - name: $p
        scopedName: 1_1_$p
        ranges: []
      - name: $match
        scopedName: 2_0_$match
        ranges:
          - start:
              line: 1
              column: 9
            end:
              line: 1
              column: 12
            startByte: 8
            endByte: 11
    sourceFile: test-file.tsx
    content: "foo;bar;baz;\n"
    byteRanges: ~
    ranges:
      - start:
          line: 1
          column: 9
        end:
          line: 1
          column: 12
        startByte: 8
        endByte: 11
  rewritten:
    messages: []
    variables: []
    sourceFile: test-file.tsx
    content: "foo;baaaar;baaaz;\n"
    byteRanges:
      - start: 4
        end: 11
      - start: 11
        end: 16
    ranges: []
  reason: ~
  id: d2331c02-d629-41d5-b094-8ad767b0ebdb
- __typename: DoneFile
  relativeFilePath: test-file.tsx
