crates/core/src/snapshots/marzano_core__test__assoc_matcher.snap
---
source: apps/marzano/core/src/test.rs
expression: results
---
- __typename: DoneFile
  relativeFilePath: test-file.tsx

