crates/core/src/snapshots/marzano_core__test__basic_php.snap
---
source: crates/core/src/test.rs
expression: results
---
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges: []
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
      - name: $str
        scopedName: 1_0_$str
        ranges: []
      - name: $match
        scopedName: 1_1_$match
        ranges:
          - start:
              line: 1
              column: 1
            end:
              line: 1
              column: 19
            startByte: 0
            endByte: 18
    sourceFile: foo.php
    ranges:
      - start:
          line: 1
          column: 1
        end:
          line: 1
          column: 19
        startByte: 0
        endByte: 18
    debug: "{\n  \"SORT\": \"program\",\n  \"RANGE\": {\n    \"start\": {\n      \"line\": 1,\n      \"column\": 1\n    },\n    \"end\": {\n      \"line\": 1,\n      \"column\": 19\n    }\n  },\n  \"TEXT\": \"echo \\\"hello world\\\"\",\n  \"CHILDREN\": [\n    {\n      \"SORT\": \"text\",\n      \"RANGE\": {\n        \"start\": {\n          \"line\": 1,\n          \"column\": 1\n        },\n        \"end\": {\n          \"line\": 1,\n          \"column\": 19\n        }\n      },\n      \"TEXT\": \"echo \\\"hello world\\\"\"\n    }\n  ]\n}"
  rewritten:
    messages: []
    variables: []
    sourceFile: foo.php
    content: "echo \"hello world\";"
    byteRanges:
      - start: 0
        end: 19
  ansiSummary: ""
  reason: ~
- __typename: DoneFile
  relativeFilePath: foo.php
