crates/core/src/snapshots/marzano_core__test__basic_python.snap
---
source: crates/core/src/test.rs
expression: results
---
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges: []
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
      - name: $msg
        scopedName: 1_0_$msg
        ranges:
          - start: 6
            end: 20
      - name: $match
        scopedName: 1_1_$match
        ranges:
          - start: 0
            end: 21
    sourceFile: foo.py
    ranges:
      - start:
          line: 1
          column: 1
        end:
          line: 1
          column: 22
        startByte: 0
        endByte: 21
    debug: "{\n  \"SORT\": \"module\",\n  \"RANGE\": {\n    \"start\": {\n      \"line\": 1,\n      \"column\": 1\n    },\n    \"end\": {\n      \"line\": 2,\n      \"column\": 22\n    }\n  },\n  \"statements\": [\n    {\n      \"SORT\": \"call\",\n      \"RANGE\": {\n        \"start\": {\n          \"line\": 1,\n          \"column\": 1\n        },\n        \"end\": {\n          \"line\": 1,\n          \"column\": 22\n        }\n      },\n      \"arguments\": {\n        \"SORT\": \"argument_list\",\n        \"RANGE\": {\n          \"start\": {\n            \"line\": 1,\n            \"column\": 6\n          },\n          \"end\": {\n            \"line\": 1,\n            \"column\": 22\n          }\n        },\n        \"arguments\": [\n          {\n            \"SORT\": \"string\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 7\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 21\n              }\n            },\n            \"content\": [\n              {\n                \"SORT\": \"string_content\",\n                \"RANGE\": {\n                  \"start\": {\n                    \"line\": 1,\n                    \"column\": 8\n                  },\n                  \"end\": {\n                    \"line\": 1,\n                    \"column\": 20\n                  }\n                },\n                \"TEXT\": \"hello world!\"\n              }\n            ],\n            \"CHILDREN\": [\n              {\n                \"SORT\": \"string_start\",\n                \"RANGE\": {\n                  \"start\": {\n                    \"line\": 1,\n                    \"column\": 7\n                  },\n                  \"end\": {\n                    \"line\": 1,\n                    \"column\": 8\n                  }\n                },\n                \"TEXT\": \"\\\"\"\n              },\n              {\n                \"SORT\": \"string_end\",\n                \"RANGE\": {\n                  \"start\": {\n                    \"line\": 1,\n                    \"column\": 20\n                  },\n                  \"end\": {\n                    \"line\": 1,\n                    \"column\": 21\n                  }\n                },\n                \"TEXT\": \"\\\"\"\n              }\n            ]\n          }\n        ],\n        \"CHILDREN\": [\n          {\n            \"SORT\": \"(\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 6\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 7\n              }\n            },\n            \"TEXT\": \"(\"\n          },\n          {\n            \"SORT\": \")\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 21\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 22\n              }\n            },\n            \"TEXT\": \")\"\n          }\n        ]\n      },\n      \"function\": {\n        \"SORT\": \"identifier\",\n        \"RANGE\": {\n          \"start\": {\n            \"line\": 1,\n            \"column\": 1\n          },\n          \"end\": {\n            \"line\": 1,\n            \"column\": 6\n          }\n        },\n        \"TEXT\": \"print\"\n      }\n    },\n    {\n      \"SORT\": \"call\",\n      \"RANGE\": {\n        \"start\": {\n          \"line\": 2,\n          \"column\": 1\n        },\n        \"end\": {\n          \"line\": 2,\n          \"column\": 22\n        }\n      },\n      \"arguments\": {\n        \"SORT\": \"argument_list\",\n        \"RANGE\": {\n          \"start\": {\n            \"line\": 2,\n            \"column\": 4\n          },\n          \"end\": {\n            \"line\": 2,\n            \"column\": 22\n          }\n        },\n        \"arguments\": [\n          {\n            \"SORT\": \"string\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 2,\n                \"column\": 5\n              },\n              \"end\": {\n                \"line\": 2,\n                \"column\": 21\n              }\n            },\n            \"content\": [\n              {\n                \"SORT\": \"string_content\",\n                \"RANGE\": {\n                  \"start\": {\n                    \"line\": 2,\n                    \"column\": 6\n                  },\n                  \"end\": {\n                    \"line\": 2,\n                    \"column\": 20\n                  }\n                },\n                \"TEXT\": \"this is python\"\n              }\n            ],\n            \"CHILDREN\": [\n              {\n                \"SORT\": \"string_start\",\n                \"RANGE\": {\n                  \"start\": {\n                    \"line\": 2,\n                    \"column\": 5\n                  },\n                  \"end\": {\n                    \"line\": 2,\n                    \"column\": 6\n                  }\n                },\n                \"TEXT\": \"\\\"\"\n              },\n              {\n                \"SORT\": \"string_end\",\n                \"RANGE\": {\n                  \"start\": {\n                    \"line\": 2,\n                    \"column\": 20\n                  },\n                  \"end\": {\n                    \"line\": 2,\n                    \"column\": 21\n                  }\n                },\n                \"TEXT\": \"\\\"\"\n              }\n            ]\n          }\n        ],\n        \"CHILDREN\": [\n          {\n            \"SORT\": \"(\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 2,\n                \"column\": 4\n              },\n              \"end\": {\n                \"line\": 2,\n                \"column\": 5\n              }\n            },\n            \"TEXT\": \"(\"\n          },\n          {\n            \"SORT\": \")\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 2,\n                \"column\": 21\n              },\n              \"end\": {\n                \"line\": 2,\n                \"column\": 22\n              }\n            },\n            \"TEXT\": \")\"\n          }\n        ]\n      },\n      \"function\": {\n        \"SORT\": \"identifier\",\n        \"RANGE\": {\n          \"start\": {\n            \"line\": 2,\n            \"column\": 1\n          },\n          \"end\": {\n            \"line\": 2,\n            \"column\": 4\n          }\n        },\n        \"TEXT\": \"log\"\n      }\n    }\n  ]\n}"
  rewritten:
    messages: []
    variables: []
    sourceFile: foo.py
    content: "log(\"hello world!\")\nlog(\"this is python\")"
    byteRanges:
      - start: 0
        end: 19
  ansiSummary: ""
  reason: ~
- __typename: DoneFile
  relativeFilePath: foo.py
