crates/core/src/snapshots/marzano_core__test__code_span.snap
---
source: crates/core/src/test.rs
expression: results
---
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges: []
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
      - name: $source
        scopedName: 1_0_$source
        ranges:
          - start:
              line: 1
              column: 10
            end:
              line: 1
              column: 14
            startByte: 9
            endByte: 13
      - name: $match
        scopedName: 1_1_$match
        ranges:
          - start:
              line: 1
              column: 9
            end:
              line: 1
              column: 15
            startByte: 8
            endByte: 14
    sourceFile: foo.md
    content: "This is `code`"
    byteRanges: ~
    ranges:
      - start:
          line: 1
          column: 9
        end:
          line: 1
          column: 15
        startByte: 8
        endByte: 14
  rewritten:
    messages: []
    variables: []
    sourceFile: foo.md
    content: This is code
    byteRanges:
      - start: 8
        end: 12
    ranges: []
  reason: ~
- __typename: DoneFile
  relativeFilePath: foo.md
