crates/core/src/snapshots/marzano_core__test__filename_autoset.snap
---
source: crates/core/src/test.rs
expression: results
---
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges: []
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
      - name: $match
        scopedName: 1_0_$match
        ranges:
          - start:
              line: 1
              column: 1
            end:
              line: 1
              column: 9
            startByte: 0
            endByte: 8
    sourceFile: test-file.tsx
    content: "whatever;\n"
    byteRanges: ~
    ranges:
      - start:
          line: 1
          column: 1
        end:
          line: 1
          column: 9
        startByte: 0
        endByte: 8
  rewritten:
    messages: []
    variables: []
    sourceFile: the_new_name
    content: "changed;\n"
    byteRanges:
      - start: 0
        end: 7
    ranges: []
  reason: ~
  id: f3827a97-072b-44db-87a6-173880f669b0
- __typename: DoneFile
  relativeFilePath: test-file.tsx
